# fruitchip

./: .gitmodules  CMakeLists.txt  README.md  git_version.cmake  ps2dev_iop.cmake  version.cmake
.github/workflows/: ci.yml
fruitchip-fw/: CMakeLists.txt
fruitchip-fw-apps/: CMakeLists.txt  apps.hexpat  build_apps_partition.py
fruitchip-fw-board/: board_configuration.cmake  custom.cmake.example  yd-rp2040.cmake
fruitchip-fw-bootloader/: CMakeLists.txt
fruitchip-fw-bootloader/src/: main.c
fruitchip-fw/include/: binary_info.h  git_version.h.in
fruitchip-fw/include/boot_rom/: boot_rom.pio  data_out.h  loader.h
fruitchip-fw/include/boot_rom/read/: iopboot.h
fruitchip-fw/include/boot_rom/write/: patch_control.h  version.h
fruitchip-fw/lib/wear_leveling/: wear_leveling_drivers.h  wear_leveling_internal.h  wear_leveling_rp2040_flash.c  wear_leveling_rp2040_flash_config.h
fruitchip-fw/src/: apps.h  git_version.c  main.c  reset.c  settings.c  settings.h
fruitchip-fw/src/boot_rom/: data_out.c  data_out.h  handler.c  handler.h  loader.c.in
fruitchip-fw/src/boot_rom/read/: idle.c  iopboot.c  osdsys.c
fruitchip-fw/src/boot_rom/write/: disable_next_osdsys_hook.c  flash.c  flash.h  get_payload.c  get_payload.h  idle.c  kv.c  kv.h  patch_control.c  read_app.c  version.c
fruitchip-fwfs/: CMakeLists.txt
fruitchip-fwfs/src/: fwfs.c
fruitchip-include/: binary_info_parser.h  led_color.h  sio_ext.h
fruitchip-include/modchip/: apps.h  cmd.h  flash.h  fwfs.h  io.h  settings.h  version.h
fruitchip-loader/ee/: CMakeLists.txt
fruitchip-loader/ee-stage1/: CMakeLists.txt
fruitchip-loader/ee-stage1/src/: main.c
fruitchip-loader/ee-stage2/: CMakeLists.txt
fruitchip-loader/ee-stage2/include/: load_elf.h
fruitchip-loader/ee-stage2/src/: main.c
fruitchip-loader/ee/stage1/: CMakeLists.txt
fruitchip-loader/ee/stage1/src/: main.c
fruitchip-loader/ee/stage2/: CMakeLists.txt
fruitchip-loader/ee/stage2/src/: main.c
fruitchip-menu/: CMakeLists.txt
fruitchip-menu/include/: apps.h  embedded_irx.h  init.h  pin_config.h  state.h  update.h  version.h
fruitchip-menu/include/components/: list.h  progress_bar.h
fruitchip-menu/include/scene/: settings.h
fruitchip-menu/include/scene/settings/: update.h
fruitchip-menu/lib/: wstring.h
fruitchip-menu/lib/masswatch/ee/: CMakeLists.txt
fruitchip-menu/lib/masswatch/ee/include/: masswatch.h
fruitchip-menu/lib/masswatch/ee/src/: masswatch.c
fruitchip-menu/lib/masswatch/include/: masswatch-sifcmd.h
fruitchip-menu/lib/masswatch/iop/: CMakeLists.txt
fruitchip-menu/lib/masswatch/iop/include/: irx_imports.h
fruitchip-menu/lib/masswatch/iop/src/: imports.lst  main.c
fruitchip-menu/res/: dejavu-sans-mono-19px-bold-aa.bmfc
fruitchip-menu/src/: apps.c  boot_list.c  boot_list.h  constants.h  embedded_irx.c.in  embedded_irx.h  init.c  main.c  pin_config.c  state.h  update.c  utils.c  utils.h  version.c
fruitchip-menu/src/components/: button_guide.c  font.c  list.c  list.h  progress_bar.c
fruitchip-menu/src/input/: pad.c
fruitchip-menu/src/scene/: boot_list.c  boot_options.c  boot_options_osdsys.c  boot_options_osdsys.h  init.c  message.c  settings.c  settings_about.c  settings_about_update_apps.c  settings_about_update_fw.c  superscene.c  superscene.h
fruitchip-menu/src/scene/settings/update/: checking.c  complete.c  found.c  not_found.c  rebooting.c  scanning.c  writing.c
fruitchip-menu/tools/: convert_bmfont.py
fruitchip-test-ps2/: CMakeLists.txt
fruitchip-test-ps2/include/: embedded_irx.h  test.h  utility.h
fruitchip-test-ps2/src/: embedded_irx.c.in  main.c
fruitchip-test-ps2/src/test/: apps.c  data_out.c  menu.c  settings.c
loader/: .clangd  .gitignore  Makefile
loader/ee-stage1/: Makefile  linkfile.in
loader/ee-stage1/src/: main.c
loader/ee-stage1/tools/: embed_stage1_checksum.c
loader/ee-stage2/: Makefile
loader/ee-stage2/src/: main.c
loader/lib/: fletcher16.h  modchip.h  usleep.h
loader/tools/: fletcher16.c
pico-status-led/: CMakeLists.txt  colored_status_led.c  status_led.c
pico-status-led/include/: colored_status_led.h  status_led.h
src/: apps.h  boot_rom.pio  boot_rom_data_out.c  boot_rom_data_out.h  boot_rom_passive_reader.pio  boot_rom_read_handler.c  boot_rom_read_handler.h  boot_rom_write_handler.c  boot_rom_write_handler.h  dma.c  dma.h  loader_ee.h  main.c  reset.c  utils.h
tools/: build_apps_partition.py
